# dynomite

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  deny.toml  flake.nix  rust-toolchain.toml
crates/dyn-admin/: Cargo.toml  README.md
crates/dyn-admin/src/: client.rs  error.rs  lib.rs  main.rs  output.rs
crates/dyn-admin/tests/: aae_status_integration.rs  bucket_props_integration.rs  cli_smoke.rs  cluster_admin_integration.rs  cluster_info.rs  ping_integration.rs  ring_status_integration.rs
crates/dyn-encoding/: Cargo.toml  README.md
crates/dyn-encoding/src/: error.rs  lib.rs  registry.rs  value.rs
crates/dyn-hash-tool/: Cargo.toml
crates/dyn-hash-tool/src/: main.rs
crates/dyn-hash-tool/tests/: c_compat.rs  smoke.rs
crates/dyn-riak/: Cargo.toml  README.md
crates/dyn-riak/src/: bucket_props.rs  error.rs  lib.rs  replication.rs  router.rs  server.rs
crates/dyn-riak/tests/: aae_persist_round_trip.rs  bucket_props_routing.rs  datatypes_properties.rs  datatypes_round_trip.rs  dvv_properties.rs  handoff_fsm.rs  http_round_trip.rs  mapreduce_round_trip.rs  mapreduce_wasm.rs  noxu_pbc_round_trip.rs  pbc_round_trip.rs  reaper_fsm.rs  tls_round_trip.rs
crates/dyn-sup/: Cargo.toml
crates/dyn-sup/src/: atomics.rs  backoff.rs  error.rs  lib.rs  supervisor.rs
crates/dyniak/: Cargo.toml  README.md
crates/dyniak-bench/: Cargo.toml  README.md
crates/dyniak-bench/examples/: ft-search.toml  redis-mixed.toml  riak-crdts.toml  riak-http-encodings.toml  riak-pbc.toml  riak-quic.toml  riak-search.toml  riak-txn.toml
crates/dyniak-bench/src/: config.rs  engine.rs  error.rs  keygen.rs  lib.rs  main.rs  plot.rs  report.rs  stats.rs  txn_workload.rs  valgen.rs
crates/dyniak-bench/tests/: integration.rs  plot_smoke.rs
crates/dyniak/examples/: chaos_local_server.rs
crates/dyniak/src/: bucket_props.rs  crdt_store.rs  error.rs  lib.rs  ramp.rs  ramp_store.rs  replica_apply.rs  replication.rs  router.rs  server.rs  txn.rs
crates/dyniak/tests/: aae_persist_round_trip.rs  bucket_props_routing.rs  crdt_pbc_round_trip.rs  crdt_read_coordination.rs  crdt_register_flag_round_trip.rs  datatypes_properties.rs  datatypes_round_trip.rs  datatypes_wire_ids.rs  delta_crdt_bandwidth.rs  delta_crdt_properties.rs  dvv_properties.rs  handoff_fsm.rs  hlc_properties.rs  hlc_snapshot_demo.rs  http_objects.rs  http_round_trip.rs  http_search.rs  http_server_variants.rs  itc_properties.rs  mapreduce_bucket_inputs.rs  mapreduce_link_phase.rs  mapreduce_pb_properties.rs  mapreduce_round_trip.rs  mapreduce_wasm.rs  noxu_pbc_round_trip.rs  object_links.rs  pbc_round_trip.rs  quic_pbc.rs  ramp_history.rs  ramp_properties.rs  reaper_fsm.rs  replica_routing.rs  tls_round_trip.rs  txn_http_round_trip.rs  wasm_rust_fixtures.rs  xa_cross_node.rs  xa_net_wire.rs  xa_recovery.rs
crates/dynomite/: Cargo.toml  README.md
crates/dynomite-search/: Cargo.toml  README.md
crates/dynomite-search/benches/: ft_search.rs
crates/dynomite-search/examples/: demo_vector_text.rs
crates/dynomite-search/src/: ft.rs  ft_filter.rs  lib.rs  query_fsm.rs  registry.rs  schema.rs  sugest.rs  sugest_registry.rs  wire.rs
crates/dynomite-search/tests/: ft_filter_grammar.rs  ft_redis.rs  ft_surface.rs  persistence.rs  registry_text.rs  search_properties.rs  sugest.rs  vector_registry.rs
crates/dynomite-text/: Cargo.toml
crates/dynomite-text/benches/: index_throughput.rs
crates/dynomite-text/src/: index.rs  lib.rs  persist.rs  postings.rs  prefix_extract.rs  regex_ast.rs  tiling.rs  tre.rs  trigram.rs
crates/dynomite-text/tests/: index.rs  persist_round_trip.rs  postings.rs  regex_perf.rs  regex_search.rs  regex_search_approx.rs  tiling_property.rs  tre_wrapper.rs  trigram.rs
crates/dynomite-vec/: Cargo.toml
crates/dynomite-vec/benches/: throughput.rs
crates/dynomite-vec/examples/: quickstart.rs
crates/dynomite-vec/src/: api.rs  distance.rs  encoding.rs  engine.rs  lib.rs  storage.rs  turbo_hnsw.rs  turbo_index.rs
crates/dynomite-vec/tests/: storage.rs  turbo_hnsw.rs  turbovec.rs
crates/dynomite/benches/: crypto.rs  dnode.rs  ft_search.rs  hashkit.rs  macro_throughput.rs  mbuf.rs  parsers.rs  quorum.rs  random_slicing.rs  tokens.rs
crates/dynomite/examples/: demo_vector_text.rs  embedded_cluster3.rs  embedded_custom_transport_sketch.rs  embedded_minimal.rs  embedded_single_node.rs  embedded_with_custom_transport.rs  eval_parse.rs  gen_crypto_fixture.rs  generate_aes_fuzz_seeds.rs  generate_hashkit_vectors.rs  random_slicing.rs
crates/dynomite/src/: lib.rs
crates/dynomite/tests/: cluster_apl.rs  cluster_capability.rs  cluster_capability_residual.rs  cluster_info.rs  cluster_residual_property.rs  conf_fixtures.rs  conf_property.rs  core_log_state.rs  datastructure_property.rs  distributed_tracing.rs  embed_api.rs  events_manager.rs  ft_redis.rs  gossip_wiring.rs  hinted_handoff.rs  memcache_fragment_property.rs  peer_plane_tls.rs  proto_dnode_coverage.rs  proto_memcache_coalesce_coverage.rs  proto_memcache_coverage.rs  proto_property.rs  proto_redis_coalesce_tracker.rs  proto_redis_commands_coverage.rs  proto_redis_parser_coverage.rs  proto_redis_parser_deep.rs  proto_redis_repair_coverage.rs  random_slicing.rs  random_slicing_property.rs  read_repair.rs  runtime_sidejob.rs  runtime_throttle.rs  stage_01_core.rs  stage_02_io.rs  stage_03_distributions.rs  stage_03_hashkit.rs  stage_03_properties.rs  stage_05_stats.rs  stage_06_crypto.rs  stage_07_msg.rs  stage_08_proto.rs  (+11 more)
crates/dynomited/: Cargo.toml
crates/dynomited/conf/: redis_with_password.yml
crates/dynomited/examples/: gen_crypto_fixture.rs  generate_aes_fuzz_seeds.rs  generate_hashkit_vectors.rs
crates/dynomited/man/: dynomited.8
crates/dynomited/src/: asciilogo.rs  cli.rs  (+11 more)
crates/dyntext/: Cargo.toml
crates/dynvecdb/: Cargo.toml  README.md
crates/fuzz/: Cargo.toml
crates/gen-fsm/: Cargo.toml
crates/hashtree/: Cargo.toml
crates/loom-tests/: Cargo.toml
crates/model-tests/: Cargo.toml
crates/sup/: Cargo.toml
crates/throttle-core/: Cargo.toml
crates/tre-sys/: Cargo.toml  build.rs
(+787 files in other folders)
