[workspace]
resolver = "2"
members = [
    "crates/dynomite",
    "crates/dynomited",
    "crates/dynomite-search",
    "crates/dyn-hash-tool",
    "crates/dyn-encoding",
    "crates/dyniak",
    "crates/dyn-admin",
    "crates/dynomite-text",
    "crates/dynomite-vec",
    "crates/tre-sys",
    "crates/gen-fsm",
    "crates/dyn-hashtree",
    "crates/loom-tests",
    "crates/model-tests",
    "crates/dyn-sup",
    "crates/throttle-core",
    "crates/dyniak-bench",
]
exclude = [
    "crates/fuzz",
    # WASM fixture crates compiled to wasm32-unknown-unknown by
    # the dyniak custom-keyfun / mapreduce tests. They are cdylib
    # crates built for a non-host target via a test harness, so
    # they must never join the host workspace build graph.
    "crates/dyniak/tests/fixtures/keyfun-reverse",
    "crates/dyniak/tests/fixtures/mapreduce-double",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/gburd/dynomite"
authors = ["Greg Burd <greg@burd.me>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
# `loom` is a non-Cargo cfg gate that loom-specific tests use to
# include themselves only when `RUSTFLAGS='--cfg loom'` is set.
# Declare it here so the default build does not emit
# `unexpected_cfgs` warnings (which would be promoted to errors
# by `RUSTFLAGS=-D warnings`).
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "2.0"
anyhow = "1.0"
# Cryptographic hash and binary codec used by the standalone
# `hashtree` crate (the generic merkle/AAE primitive). BLAKE3 is
# the per-segment digest function; bincode is the snapshot wire
# format. Both are pinned to recent stable releases of their 1.x
# trains.
blake3 = "1.5"
bincode = "1.3"
# Stream trait + utilities for the streaming-list path on the
# Datastore embed hook. `futures-core` carries the `Stream` trait
# referenced by the Datastore trait signature; `futures-util`
# provides `unfold`, `StreamExt::next`, and the
# `MapErr`/`BoxBody` glue used by the dyniak HTTP and PBC
# transports. Both crates are already pulled in transitively;
# making the dependency explicit lets the streaming list paths
# import them without relying on transitive resolution.
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
ahash = "0.8"
quiche = "0.28"

# TLS for the peer plane and the Riak gateways. Pinned to the
# 0.26 family of `tokio-rustls` (which re-exports `rustls` 0.23)
# because that train is the only one with stable `aws-lc-rs` /
# `ring` provider selection. We pin `webpki-roots` to the matching
# 0.26 train and `rustls-pemfile` to 2.x for the cert/key loaders.
# `hyper-rustls` 0.27 tracks the same family and gives the Riak
# HTTP gateway tests a client-side connector without dragging in
# `reqwest`.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio", "tls12"] }
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding"] }
rsa = { version = "0.9", features = ["sha1", "sha2", "std", "pem"] }
sha1 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
nix = { version = "0.31", features = ["signal", "process", "fs", "user", "net", "hostname"] }
socket2 = "0.6"
httparse = "1.10"
prometheus = "0.14"

# Wire-format codecs (dyn-encoding crate). Pinned to track the
# rest of the workspace; bumping requires a journal entry.
# `ciborium` is preferred over `serde_cbor` because the latter
# is unmaintained. `prost` is the actively-maintained protobuf
# implementation; we avoid `prost-build` by hand-deriving
# `prost::Message` on Rust structs.
ciborium = "0.2"
prost = "0.14"

# WebAssembly runtime for the optional dyniak MapReduce Wasm
# fitting. Default features are kept off so the dependency is
# minimal: we only want module compilation (cranelift) and the
# in-process runtime, plus WAT support so tests can ship modules
# as text. Pinned at the 26.x series; bumping requires a journal
# entry.
wasmtime = { version = "46.0", default-features = false, features = ["cranelift", "runtime", "wat"] }

# Schema-first wire codecs (dyn-encoding crate). Pinned to track
# the rest of the workspace; bumping requires a journal entry.
# `flatbuffers` is the official Google runtime; we use its runtime
# API directly and avoid `flatc` so the build does not pull a
# system codegen dependency. `capnp` is the canonical Cap'n Proto
# runtime for Rust; same constraint -- no `capnpc` build step.
# `bebop` is the upstream Rust runtime for the Bebop schema
# format. `bson` is the MongoDB-shepherded BSON crate, used in
# serde mode (no document-level API surface).
flatbuffers = "25.12"
capnp = "0.26"
bebop = "3.2"
bson = { version = "3", features = ["serde"] }

# Storage backend (Noxu DB) for the Riak-compatible API and
# multi-engine storage substrate. We depend on the `noxu`
# umbrella crate (published on crates.io), which re-exports the
# full engine public API behind a single name + version.
noxu = "7.5"

# Dev / test
# `hegeltest` (re-exported as `hegel`) is the property-testing crate
# the user originally referred to as "Hegel". Repo:
# https://github.com/hegeldev/hegel-rust. The `native` feature pulls in
# the in-process backend (rand + num-bigint + num-traits) so tests do
# not need an external server.
hegeltest = { version = "0.25" }
# Loom is a model checker for concurrent Rust. It only ships into
# the build under `--cfg loom`; production code is unaffected. Tests
# that depend on it live under `crates/<crate>/tests/loom_*.rs`,
# each gated on `#![cfg(loom)]`.
loom = { version = "0.7", features = ["futures"] }
hex = "0.4"
serde_json = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.27"
clap_mangen = "0.3"
rcgen = "0.14"

# Distributed tracing (opt-in OTLP exporter; off by default).
# Versions are pinned as a compatible 0.27/0.28 family: the
# `opentelemetry*` crates do not follow semver across minor
# bumps yet, so all four pieces have to track the same release
# train. `rt-tokio` lets the SDK schedule its batch span
# processor on the existing tokio runtime; `grpc-tonic` is the
# default OTLP wire format the brief requires (Jaeger, Tempo,
# Honeycomb, OTel-Collector all accept it).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["logs"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "logs"] }
tracing-opentelemetry = "0.33"

# OTLP log appender: bridges `tracing` events to OpenTelemetry
# log records so the binary can export logs over OTLP/gRPC to
# the same collector that receives the trace stream. Tracks the
# 0.32 family of the rest of the OTel stack.
opentelemetry-appender-tracing = "0.32"

# Log-format support: `time` for the syslog timestamps; `regex`
# is dev-only (used by the format-shape tests).
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
panic = "unwind"

[profile.bench]
lto = "thin"
codegen-units = 1
