[package]
name = "dyn-sup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OTP-style supervisor tree for tokio. Owns a set of supervised tasks, watches for panics or task exit, and restarts them per a configured strategy (one_for_one, rest_for_one, simple_one_for_one, one_for_all)."

[lib]
name = "sup"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }

# Loom is the model checker. It is only pulled into the build under
# `RUSTFLAGS='--cfg loom'`; production builds are unaffected. The
# `crate::atomics` submodule shadows its `std::sync::atomic` imports
# with `loom::sync::atomic` under that flag so the bookkeeping
# primitives can be exercised by `loom::model`. The supervisor
# runtime itself is gated on `cfg(not(loom))` because tokio's
# networking modules do not link under loom.
[target.'cfg(loom)'.dependencies]
loom = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }

[lints]
workspace = true
