[package]
name = "dyniak"
description = "Riak-compatible protocol surface (HTTP + PBC) and storage bridge for the Dynomite Rust port"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
# Build the `NoxuDatastore` implementation that bridges this crate
# to the in-process Noxu DB storage engine. Off by default so the
# crate compiles cleanly without the `noxu` checkout next door.
noxu = ["dep:noxu"]
# Build the Wasm phase fitting for MapReduce. Pulls in `wasmtime`
# and `ciborium`. Off by default so operators who do not need
# user-defined Wasm phases do not pay for the wasmtime
# compilation.
wasm = ["dep:wasmtime", "dep:ciborium"]

[dependencies]
dynomite = { path = "../dynomite", package = "dynomite-engine", version = "0.1.0" }
dyn-encoding = { path = "../dyn-encoding", version = "0.0.1" }
dyn-hashtree = { path = "../dyn-hashtree", version = "0.0.1" }
gen-fsm = { path = "../gen-fsm", version = "0.0.1" }
throttle-core = { path = "../throttle-core", version = "0.0.1" }
bytes = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1.10", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
noxu = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
hegeltest = { workspace = true }
rcgen = { workspace = true }
hyper-rustls = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
